<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:gravity="bottom"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:textColor="@color/textColorPrimary"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_15sp"
            android:layout_margin="@dimen/_10"
            android:text="@string/meet_out_physicians"/>
        <ImageView
            android:background="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_280"
            android:src="@drawable/doctor"
            android:contentDescription="@string/dr_name" />
        <TextView
            android:fontFamily="cursive"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:layout_margin="@dimen/_20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_25sp"
            android:text="@string/dr_name"/>
        <TextView
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="@dimen/_10"
            android:layout_marginLeft="@dimen/_20"
            android:layout_marginStart="@dimen/_20"
            android:layout_marginBottom="@dimen/_20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_15sp"
            android:text="@string/dr_department"/>
        <TextView
            android:textColor="@color/textColorPrimary"
            android:layout_marginTop="@dimen/_10"
            android:layout_marginLeft="@dimen/_20"
            android:layout_marginStart="@dimen/_20"
            android:layout_marginBottom="@dimen/_20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_15sp"
            android:text="@string/dr_about_us"/>
        <Button
            android:background="@color/navigationBarColor"
            android:text="@string/btn_dr"
            android:textAllCaps="true"
            android:layout_gravity="end"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>