<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.andanhm.healthcare.fragment.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/textColorPrimary"
        android:layout_margin="@dimen/_20"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:layout_margin="@dimen/_10"
            android:src="@drawable/ic_appointment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/text_appointment" />
        <TextView
            android:fontFamily="casual"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="@dimen/_40sp"
            android:text="@string/text_appointment"
            android:textStyle="bold"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/textColorPrimary"
        android:layout_margin="@dimen/_20"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:layout_margin="@dimen/_10"
            android:src="@drawable/ic_doctor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/text_doctors" />
        <TextView
            android:fontFamily="casual"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="@dimen/_40sp"
            android:text="@string/text_doctors"
            android:textStyle="bold"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/textColorPrimary"
        android:layout_margin="@dimen/_20"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:layout_margin="@dimen/_10"
            android:src="@drawable/ic_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/text_doctors" />
        <TextView
            android:fontFamily="casual"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="@dimen/_40sp"
            android:text="@string/text_notification"
            android:textStyle="bold"/>
    </LinearLayout>

</LinearLayout>